<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="space.lucydevine.gamecounter1.MainActivity">

    <!-- Game Mode LED -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto"
                android:padding="10dp"
                android:textAllCaps="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="30sp"
                android:text="O"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tele"
                android:textAllCaps="true"
                android:padding="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="30sp"
                android:text="O"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Display Label-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:paddingLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginLeft="20dp"
            android:paddingLeft="10dp"
            android:text="@string/match"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginLeft="20dp"
            android:paddingLeft="10dp"
            android:text="@string/team"/>
    </LinearLayout>

    <!-- Display Screen -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/displayBG"
        android:layout_margin="10dp"
        android:padding="10dp">

        <!-- Row 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/r11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:paddingStart="6dp"
                android:paddingEnd="10dp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:text="       1:1"/>
            <TextView
                android:id="@+id/r12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="5518"/>
        </LinearLayout>


        <!-- Row 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/r21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/blankDisplay"/>
            <TextView
                android:id="@+id/r22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_weight="1"
                android:text="@string/blankDisplay"/>
            <TextView
                android:id="@+id/r23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_weight="1"
                android:text="@string/blankDisplay"/>
            <TextView
                android:id="@+id/r24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_weight="1"
                android:text="@string/blankDisplay"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Special Function Buttons and Labels -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/sf1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:text="@string/sf1_lbl"/>
            <Button
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b1"
                android:onClick="incrementSF1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/sf2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:text="@string/sf2_lbl"/>
            <Button
                android:id="@+id/b2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b2"
                android:onClick="incrementSF2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/sf3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:text="@string/sf3_lbl"/>
            <Button
                android:id="@+id/b3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b3"
                android:onClick="incrementSF3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/sf4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:text=""/>
            <Button
                android:id="@+id/b4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b4"
                android:onClick="incrementSF4"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Menu Navigation Buttons and Labels -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/labelPrev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:text="@string/prev_lbl"/>
            <Button
                android:id="@+id/prev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prev"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/labelNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:text="@string/next_lbl"/>
            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/labelReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:text="@string/reset_lbl"/>
            <Button
                android:id="@+id/reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/labelMenu4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:text="@string/power_lbl"/>
            <Button
                android:id="@+id/power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/power"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
